--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@metaplex/js": "^4.10.0",
+    "@metaplex/js": "4.9.0",
     "@solana/web3.js": "^1.31.0",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "winston": "^3.3.3"
   }
 }
